# dataset_iterator

./: README.md  example.py  pyproject.toml  run_dataset_iterator.py
dataset_iterator/: abstract_dataset_runner.py  abstract_iterator.py  classification_runner.py  fabrics.py  rpo_iterator.py  sorting_runner.py  vqa_dataset_runner.py  vqa_iterator.py
dataset_iterator/examples/: example_vqa.py  model.py
