[tool.poetry]
name = "dataset-iterator"
version = "0.1.0"
description = ""
authors = ["Semyon W232 <lukinsemyon@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
prompt-adapter = {git = "https://github.com/VLMHyperBenchTeam/prompt_adapter.git"}
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
